Bug 882042 - Remove horizontal scrollbar from select popups. r=rsilveira
UltraBlame original commit: 0b00815b8f6b528e23f8e91a11e6d6afb33b6838

--- a/browser/metro/theme/forms.css
+++ b/browser/metro/theme/forms.css
@@ -808,3 +808,26 @@ color
 black
 ;
 }
+.
+select
+-
+popup
+>
+richlistbox
+>
+scrollbox
+{
+width
+:
+100
+%
+;
+overflow
+-
+x
+:
+hidden
+!
+important
+;
+}
